# eversend-rust-sdk

./: CONTRIBUTING.md  Cargo.toml  readme.md
.github/workflows/: rust.yml
src/: accounts.rs  auth.rs  beneficiaries.rs  collections.rs  core.rs  crypto.rs  eversend.rs  exchange.rs  lib.rs  payouts.rs  transactions.rs  wallets.rs
src/accounts/operations/: get_profile.rs
src/accounts/types/: account.rs
src/auth/: operations.rs
src/auth/operations/: generate_api_token.rs
src/beneficiaries/: operations.rs  types.rs
src/beneficiaries/operations/: check_eversend_account.rs  create_beneficiaries.rs  create_beneficiary.rs  delete_beneficiary.rs  edit_beneficiary.rs  get_bank_details.rs  get_beneficiaries.rs  get_beneficiary.rs
src/beneficiaries/types/: bank.rs  beneficiary.rs
src/collections/: operations.rs  types.rs
src/collections/operations/: get_collection_fees.rs  get_collection_otp.rs  get_mobile_money_collection.rs
src/collections/types/: collection_fees.rs  mobile_money_collection.rs
src/core/: constants.rs  error.rs  response.rs  types.rs
src/core/types/: api_response_body.rs  api_response_list.rs  api_token.rs  client_id.rs  client_secret.rs
src/crypto/: operations.rs  types.rs
src/crypto/operations/: create_crypo_address.rs  fetch_asset_chains.rs  fetch_crypto_addresses.rs  fetch_crypto_transactions.rs
src/crypto/types/: asset_chains.rs  crypto_address.rs  crypto_transaction.rs
src/exchange/: operations.rs  types.rs
src/payouts/: operations.rs  types.rs
src/transactions/: operations.rs
src/wallets/: operations.rs
(+25 files in other folders)
