[package]
name = "eversend_rust_sdk"
description = "Eversend Rust SDK"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
mockito = "0.31.1"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
